--- a/aoc23/pubspec.yaml
+++ b/aoc23/pubspec.yaml
@@ -8,9 +8,10 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  vector_math: ^2.1.4
+  basics: ^0.10.0
+  quiver: ^3.2.1
   # path: ^1.8.0
 
 dev_dependencies:
-  lints: ^2.1.0
+  lints: ^3.0.0
   test: ^1.24.0
